[package]
name = "f4-bsp"
version = "0.0.1"
authors = ["jonlamb-gh <lamb.jon.io@gmail.com>"]
repository = "https://github.com/jonlamb-gh/f4-bsp.git"

[dependencies.stm32f407-hal]
version = "0.0.1"
git = "https://github.com/jonlamb-gh/stm32f407-hal.git"
branch = "devel"

[dev-dependencies.stm32f407-hal]
version = "0.0.1"
git = "https://github.com/jonlamb-gh/stm32f407-hal.git"
branch = "devel"
features = ["rt"]

[dev-dependencies]
aligned = "0.2.0"
cortex-m = "0.5.2"
cortex-m-rt = "0.5.1"
cortex-m-semihosting = "0.3.0"
panic-semihosting = "0.3.0"
madgwick = "0.1.1"

[dev-dependencies.nb]
version = "0.1.1"

[dependencies.cast]
default-features = false
version = "0.2.2"

[features]
rt = ["stm32f407-hal/rt"]

